- Added JRuleInvocationCallback which is a functional interface that allows to call an anonymous function instead of a predefined method. - Rule execution refactored, so that it is based on a new JRuleInvocationCallback instead of JRule and method. - Contexts, JRuleModuleEntry, etc. now use the callback instead of JRule and method. - Annotation processing in JRuleEngine internally uses JRuleBuilder as well. Method-call is wrapped inside a callback.